crates/strata-kernel/tests/ui/semantic_authority_is_sealed.rs
use strata_kernel::{IntentAnalysis, IntentAnalyzer, TestSemanticProvider};

fn main() {}
